# SeleniumEntra

./: .gitignore  Dockerfile  Dockerfile.powershell  PowerShellAuth.ps1  README.md  SeleniumTestFramework  azure-pipelines.yml  docker-compose.yml  pyproject.toml  run_tests.sh
ReportGenerator/: report_generator.py
SeleniumTests/: SeleniumTests.csproj
SeleniumTests/PageObjects/: BasePage.cs  LoginPage.cs
SeleniumTests/Tests/: LoginTests.cs
