[tool.poetry]
name = "azure-selenium-test-container"
version = "0.1.0"
description = "A self-contained Docker container solution for Azure/Entra authentication and Selenium testing"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.2"
selenium = "^4.1.0"
azure-identity = "^1.7.0"
azure-keyvault-secrets = "^4.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
